# Graduation-project-ESP32

./: .gitignore  README.md
V1.0/: README_V1.0.md  install_driver.bat
V1.0/docs/: MEDIA_PLAYER_GUIDE.md  NETWORK_MODULES.md  OneNet_Device_Activation_Flowchart_Paper.html  OneNet_HTTP_API_Integration_Flowchart.html  PERFORMANCE_OPTIMIZATION.md
V1.0/html/: cloud-dashboard.html  download-fonts.bat  exbug-tool.html  feedback.html  index.html  manifest.json
V1.0/main/: idf_component.yml  main.c
V1.0/matlab/: CCCV_Power_Supply.slx  CCCV_Power_Supply_Model.slx  Create_CCCV_Simulink_Model.m
V1.0/tools/: convert_video.bat
V2.0/: CMakeLists.txt  README.md  sdkconfig
V2.0/BSP/GUIDER/: CMakeLists.txt
V2.0/BSP/GUIDER/custom/: custom.c
V2.0/BSP/GUIDER/custom/modules/fonts/: myFont.h
V2.0/BSP/GUIDER/custom/modules/media_player/: media_player.c
V2.0/BSP/GUIDER/custom/modules/oscilloscope/: oscilloscope_adc.h  oscilloscope_draw.h  oscilloscope_export.h
V2.0/BSP/GUIDER/custom/modules/screenshot/: screenshot_storage.c
V2.0/BSP/GUIDER/custom/modules/sdcard_manager/: sdcard_manager_ui.h
V2.0/BSP/GUIDER/custom/modules/wireless_serial/: wireless_serial.c  wireless_serial.h
V2.0/docs/: CC_CV_Power_Supply_Diagram.html  FILE_INDEX.md  OSCILLOSCOPE_CURSOR_INTERACTION_UPDATE.md  OSCILLOSCOPE_FFT_FIX.md  OSCILLOSCOPE_MEASUREMENT_FIX.md  OSCILLOSCOPE_PERFORMANCE_OPTIMIZATION.md  OSCILLOSCOPE_QUICK_TEST.md  OSCILLOSCOPE_VOLTAGE_RANGE_FIX.md
V2.0/html/: setup-libs.bat
V3.0/: sdkconfig  sdkconfig.defaults
V3.0/docs/: EXTEND_SCREEN_USAGE.md  OSCILLOSCOPE_AUTO_IMPROVEMENT.md  OSCILLOSCOPE_COMPILE_FIX.md  OSCILLOSCOPE_CURSOR_IMPLEMENTATION_SUMMARY.md  OSCILLOSCOPE_CURSOR_QUICK_TEST.md  OSCILLOSCOPE_OPTIMIZATION_SUMMARY.md  OSCILLOSCOPE_TESTING_MODE.md  Technical_Roadmap.html  wireless_serial_README.md
V3.0/html/: data.html  serial-debug.html
V3.0/main/: CMakeLists.txt
V3.0/matlab/: CCCV_Power_Supply_Model.slxc  CC_CV_Power_Supply_Simulation.m
V4.0/: .gitignore  README.md  partitions.csv  sdkconfig
V4.0/docs/: OSCILLOSCOPE_CURSOR_BUILD_FIX.md  OSCILLOSCOPE_CURSOR_MEASUREMENT.md  OSCILLOSCOPE_DATA_FLOW_VERIFICATION.md  OSCILLOSCOPE_DEBUG_CHECKLIST.md  OSCILLOSCOPE_FFT_EXPORT.md  OSCILLOSCOPE_FFT_HARMONIC_ANALYSIS.md  (+3 more)
docs/: EXTEND_SCREEN_HYBRID_MODE.md  PROJECT_STRUCTURE.md  SCREEN_TEARING_SOLUTION.md
html/: key.js
matlab/: CCCV_Power_Supply.slxc  DDS_Waveform_Visualization.m
(+98 files in other folders)
